--- a/Documentation/projectestructure.tex
+++ b/Documentation/projectestructure.tex
@@ -148,11 +148,17 @@
     \newpage
 %    Secondary objective
     \subsection{Reasons}\label{subsec:Reasons}
+        \subsubsection[PHP]{PHP}
 
+        \begin{center}
+            \includegraphics[scale=0.3]{logo_php}
+        \end{center}
+        \begin{flushleft}
         The main reason I decided to use PHP over any other technology, was its actual usage among the world, which,
         taking a look at this graph, we can observe that its usage it's almost an 80\%, which confirms that even if there
         are upcoming technologies, PHP will keep there for a long time, so was a good idea familiarize myself with that
         language.
+        \end{flushleft}
 
         \begin{tikzpicture}
             \begin{axis}[title  = Web language usage among the world (26-May-2021),
@@ -168,19 +174,34 @@
             ]
                 \addplot coordinates { (79.2,PHP)         (8.6,ASP.NET)
                 (4.7,Ruby)  (3.5,Java) (1.9,Scala) (1.4,Static files) (1.3,Python) };
-                \legend{Topics, Posts}
             \end{axis}
         \end{tikzpicture}
 
         \url{https://w3techs.com/technologies/overview/programming_language}
 
-        Regarding the docker decision, there wasn't much to think about, since docker is a modern technology which I
-        already knew the bases, making it easier to pick up and start working earlier.
+        \subsubsection[Docker]{Docker}
 
-        Meanwhile the web language was picked based on its global usage, I personally already have experience with
-        Oracle, MySQL, MariaDB and MongoDB, so in order to try a different technology, I decided to use PostgreSQL,
-        since it suited my needs while also learning a new database, yet, its position among the ranking, made the
-        decision easier to take.
+        \begin{center}
+            \includegraphics[scale=0.3]{logo_docker}
+        \end{center}
+
+        \begin{flushleft}
+            Regarding the docker decision, there wasn't much to think about, since docker is a modern technology which I
+            already knew the bases, making it easier to pick up and start working earlier.
+        \end{flushleft}
+        \newpage
+        \subsubsection[PostgreSQL]{PostgresSQL}
+
+        \begin{center}
+            \includegraphics[scale=0.3]{logo_postgresql}
+        \end{center}
+
+        \begin{flushleft}
+            Meanwhile the web language was picked based on its global usage, I personally already have experience with
+            Oracle, MySQL, MariaDB and MongoDB, so in order to try a different technology, I decided to use PostgreSQL,
+            since it suited my needs while also learning a new database, yet, its position among the ranking, made the
+            decision easier to take.
+        \end{flushleft}
 
         \begin{tikzpicture}
             \begin{axis}[title  = Database global ranking (May 2021),
@@ -196,11 +217,52 @@
             ]
             \addplot coordinates { (1269.94,Oracle)         (1236.38,MySQL)
             (992.66 ,Microsoft SQL Server)  (559.25,PostgreSQL) (481.01,MongoDB) (166.66,IBM Db2) };
-            \legend{Topics, Posts}
             \end{axis}
          \end{tikzpicture}
 
         \url{https://db-engines.com/en/ranking}
+
+        \subsubsection[Nginx]{Nginx}
+
+        \begin{center}
+            \includegraphics[scale=0.3]{logo_nginx}
+        \end{center}
+        \begin{flushleft}
+                On the other hand, decided to use GitHub to store the project mainly due having a basic understanding of how
+                the tools work, since there are multiple tools that suits the same function, felt like that was the right decision.
+        \end{flushleft}
+
+        \begin{tikzpicture}
+            \begin{axis}[title  = WebServers global comparasion,
+            xbar,
+            y axis line style = { opacity = 0 },
+            axis x line       = none,
+            tickwidth         = 0pt,
+            ytick             = data,
+            enlarge y limits  = 0.2,
+            enlarge x limits  = 0.02,
+            symbolic y coords = {Microsoft-IIS, Apache, Nginx},
+            nodes near coords,
+            ]
+            \addplot coordinates { (34.0,Nginx) (33.4,Apache) (6.8 ,Microsoft-IIS)};
+            \end{axis}
+        \end{tikzpicture}
+
+        \begin{flushleft}
+            \url{https://w3techs.com/technologies/comparison/ws-apache,ws-microsoftiis,ws-nginx}
+        \end{flushleft}
+
+        \newpage
+        \subsubsection[GitHub]{GitHub}
+
+        \begin{center}
+            \includegraphics[scale=0.045]{logo_github}
+        \end{center}
+
+        \begin{flushleft}
+            On the other hand, decided to use GitHub to store the project mainly due having a basic understanding of how
+            the tools work, since there are multiple tools that suits the same function, felt like that was the right decision.
+        \end{flushleft}
 
 
     \newpage
