--- a/Documentation/docker-network-scheme.tex
+++ b/Documentation/docker-network-scheme.tex
@@ -75,7 +75,7 @@
     \newpage
     \subsection[Main Server Docker Configuration]{MainServerDockerConfiguration}\label{subsec:mainserverdockerconfiguration}
     \subsubsection[Main Server Docker-Compose]{Main Server DockerCompose}
-    \lstinputlisting[language=Yaml,label={lst:MainDockerCompose}]{../docker-compose.yml}
+    \lstinputlisting[language=Docker-compose,label={lst:MainDockerCompose}]{../docker-compose.yml}
     \paragraph{docker-compose.yml} that contains the services for the main server.
     \newpage
     \begin{flushleft}
@@ -115,9 +115,18 @@
         All the dockers have been configured to restart in case of failure, which means that unless they are stopped manually,
         they will always restart.
     \end{flushleft}
+
+
+    \newpage
+    \subsubsection[PHP Dockerfile]{PHP Dockerfile}
+    \lstinputlisting[language=Docker,label={lst:PHPDockerfile}]{../Dockerfiles/php}
     \begin{flushleft}
-        Also, as will be explained in the next section, the services PHP and PostgreSQL, are being built fromm
+        As listed in the Dockerfile, it's main (and only) function, is to install and enable PDO extension for PHP\@.
     \end{flushleft}
 
-    \subsubsection[PHP Dockerfile]{PHP Dockerfile}
-    \lstinputlisting[language=Yaml,label={lst:BackupDealer}]{../Dockerfiles/php}
+    \newpage
+    \subsubsection[Postgresql Dockerfile]{Postgresql Dockerfile}
+    \lstinputlisting[language=Docker,label={lst:PostgresqlDockerfile}]{../Dockerfiles/postgresql/Dockerfile}
+    \begin{flushleft}
+        This Dockerfile, instead of installing new packages to the image, it adds a script that will be called during the
+    \end{flushleft}
