--- a/Documentation/main.tex
+++ b/Documentation/main.tex
@@ -81,6 +81,12 @@
     \section{Introduction}\label{sec:introduction}
     \input{introduction}
 
+    \newpage
+%    Demo
+    \section{Demo}\label{sec:Demo}
+    \input{demo}
+
+    \newpage
     \section{Docker Configuration}\label{sec:DockerConfiguration}
     \input{docker-network-scheme}
 
