--- a/Documentation/main.tex
+++ b/Documentation/main.tex
@@ -87,12 +87,12 @@
     \input{demo}
 
     \newpage
+%    Docker configuration
     \section{Docker Configuration}\label{sec:DockerConfiguration}
     \input{docker-network-scheme}
 
     \newpage
 %    Service Configuration
-%    Docker Config
     \section{Services Configuration}\label{sec:ServicesConfiguration}
     \section{Services Deployment}\label{sec:ServiceDeployment}
 \end{document}
