--- a/Documentation/main.tex
+++ b/Documentation/main.tex
@@ -89,10 +89,16 @@
     \newpage
 %    Docker configuration
     \section{Docker Configuration}\label{sec:DockerConfiguration}
-    \input{docker-network-scheme}
+    \input{docker_documentation.tex}
 
     \newpage
 %    Service Configuration
     \section{Services Configuration}\label{sec:ServicesConfiguration}
+    \input{services-configuration}
+
+    \newpage
+%    Service deployment
     \section{Services Deployment}\label{sec:ServiceDeployment}
+    \input{services-deployment}
+
 \end{document}
