--- a/Documentation/docker_documentation.tex
+++ b/Documentation/docker_documentation.tex
@@ -30,7 +30,7 @@
 
     \subsubsection[PHP]{SFTP}
     \begin{flushleft}
-        While this container doesn't do nothing by themself, either has ports exposed, it's linked to the nginx server, providing php support
+        While this container doesn't do nothing by himself, either has ports exposed, it's linked to the nginx server, providing php support
         to that container.
     \end{flushleft}
 
@@ -111,6 +111,9 @@
 
     \end{enumerate}
 
+    \begin{flushleft}
+        The volume used to store the databases, it's mounted with "nocopy", to prevent data being copied data from that volume.
+    \end{flushleft}
     \begin{flushleft}
         All the dockers have been configured to restart in case of failure, which means that unless they are stopped manually,
         they will always restart.
