--- a/Documentation/main.tex
+++ b/Documentation/main.tex
@@ -89,7 +89,7 @@
     \newpage
 %    Docker configuration
     \section{Docker Configuration}\label{sec:DockerConfiguration}
-    \input{docker_documentation.tex}
+    \input{docker_documentation}
 
     \newpage
 %    Service Configuration
